# loom2ttkernel

./: CMakeLists.txt  README.md  build.sh  lower.sh  replace.py  split_kernel.py
inc/: ComputeOpToTTKernel.h  FuncOpToTTKernel.h  MatmulStreamPreprocess.h  MemoryOpToTTKernel.h  SCFOpToTTKernel.h  TTKernelAttrs.h  TTKernelUtils.h  TileLoomToTTKernel.h
src/: ComputeOpToTTKernel.cpp  FuncOpToTTKernel.cpp  MatmulStreamPreprocess.cpp  MemoryOpToTTKernel.cpp  RuntimeArgLayout.cpp  SCFOpToTTKernel.cpp  TTKernelUtils.cpp  TileLoomToTTKernel.cpp
tool/: tileloom_to_ttkernel_opt.cpp
